--- a/corazon/index.css
+++ b/corazon/index.css
@@ -32,10 +32,11 @@
 
 .corazon::before{
     content: "";
+    width: 100px;
+    height: 100px;
     position: absolute;
-    top: 50px;
+    top: -50px;
     left: 0;
     background-color: red;
     border-radius: 50%;
-    border: 10px solid violet;
 }
